--- a/default.htm
+++ b/default.htm
@@ -1,6 +1,8 @@
 <html>
 
 <head>
+    <script src="kod.js"></script>
+    <link rel="stylesheet" type="text/css" href="stil.css">
 </head>
 
 <body>
